
Extension/inheritance <|--
Composition	*--
Aggregation	o--
directed association <--
dependency <..

@startuml

class MainActivity
class Message
class Conversation
Class Contact
Class ContactsAdapter
Class ConvoAdapter
Class BroadcastReciever
Class MyDPHelper

MainActivity"1" -- "1"ContactsAdapter: Display contacts ArrayList
MainActivity "1"  -- "*"Contact : store contact
MainActivity -Message : set secretkey & select contact
Message"1" --"1" ConvoAdapter : Display convo \nArrayList
Message"1" -- "*" Conversation : Store sent &\nrecieved msges\nas conversation\nobject
Message"1" -"*" BroadcastReciever : Recieve message
Message -- MyDPHelper : store \nSecretKey



Class MainActivity{
adapter: ContactsAdapter
contacts: ArrayList<Contacts>
secretKey: EditText
SecretKey: String
}

Class Message{
ContactSecretKey: EditText
contactsecretkey: String
convo: ArrayList<Conversation>
UpdateSMSInbox(Conversation): Void
GetSMSMessages(): Void
sendSMS(String, String): Void
encryptSMS(String, String): byte[]
}

Class Conversation{
setRecievedMessage()

}

@enduml